Fix height of photos on mobile for grid items

--- a/static/css/photos-grid.css
+++ b/static/css/photos-grid.css
@@ -68,6 +68,7 @@
     width: 100%;
     max-height: 75vh;
     min-width: 0;
+    height: auto;
   }
 }
 
